some changes in images dir

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <div class="elements" >
 <div>
-    <img src="./images/rock.png" onclick="choice(1)">
+    <img src="/images/rock.PNG" onclick="choice(1)">
 </div>  
 <div>
-    <img src="./images/paper.png" onclick="choice(2)">
+    <img src="./images/paper.PNG" onclick="choice(2)">
 </div>  
 <div>
-    <img src="./images/scissors.png" onclick="choice(3)">
+    <img src="//images/scissors.png" onclick="choice(3)">
 </div> 
 
 </div> 
