successfully updated all img dir

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
     <p id="main_p">Score </p>
 
-    <p id="p1"> <span id="ys"> 0</span>  <span class="image"><img src="/images/vs.png" alt=""></span> <span id="cc"> 0</span></p>
+    <p id="p1"> <span id="ys"> 0</span>  <span class="image"><img src="./images/vs.png" alt=""></span> <span id="cc"> 0</span></p>
     
 </div>
 
